--- a/watchSensorData-v1 WatchKit App/Base.lproj/Interface.storyboard
+++ b/watchSensorData-v1 WatchKit App/Base.lproj/Interface.storyboard
@@ -11,24 +11,36 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="watchSensorData_v1_WatchKit_App" customModuleProvider="target">
                     <items>
-                        <button width="1" alignment="left" title="Record" id="sRp-9T-Kjr">
+                        <button width="1" alignment="center" title="Record" id="sRp-9T-Kjr">
                             <connections>
                                 <action selector="startRecording" destination="AgC-eL-Hgc" id="vMu-g9-xwf"/>
                             </connections>
                         </button>
-                        <button width="1" alignment="left" title="Stop" id="dBJ-Jk-yJM">
+                        <button width="1" alignment="center" title="Stop" id="dBJ-Jk-yJM">
                             <connections>
                                 <action selector="stopRecording" destination="AgC-eL-Hgc" id="1vm-FZ-jEJ"/>
                             </connections>
                         </button>
+                        <button width="1" alignment="center" title="Meal Marker" id="Hxv-2A-Csy">
+                            <connections>
+                                <action selector="timeMarker" destination="AgC-eL-Hgc" id="N8M-j1-WzL"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Show Markers" id="lLp-pr-Fne">
+                            <connections>
+                                <segue destination="GH4-nW-JO4" kind="push" identifier="markerSegue" id="z8u-ZC-TnY"/>
+                            </connections>
+                        </button>
                     </items>
                     <connections>
+                        <outlet property="markerButton" destination="Hxv-2A-Csy" id="0dV-XS-hPP"/>
                         <outlet property="recordButton" destination="sRp-9T-Kjr" id="VIK-oI-USs"/>
+                        <outlet property="showButton" destination="lLp-pr-Fne" id="WW8-x8-gEM"/>
                         <outlet property="stopButton" destination="dBJ-Jk-yJM" id="5Rf-vJ-H3p"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="259" y="27"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -60,6 +72,35 @@
                 <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="watchSensorData_v1_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="345"/>
+        </scene>
+        <!--markers-->
+        <scene sceneID="Lyi-61-Nk8">
+            <objects>
+                <controller identifier="markers" id="GH4-nW-JO4" customClass="secondInterfaceController" customModule="watchSensorData_v1_WatchKit_Extension">
+                    <items>
+                        <table alignment="left" id="4HK-zn-7N1">
+                            <items>
+                                <tableRow identifier="cell" id="GF5-tt-6bq" customClass="rowController" customModule="watchSensorData_v1_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="k6F-kc-6dN">
+                                        <items>
+                                            <label width="124" height="38" alignment="left" text="Label" id="grE-qm-7vo">
+                                                <fontDescription key="font" type="system" pointSize="12"/>
+                                            </label>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="markLabel" destination="grE-qm-7vo" id="zdV-U1-mvJ"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="markTable" destination="4HK-zn-7N1" id="Phv-9a-doU"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="486" y="26"/>
         </scene>
     </scenes>
 </document>
